--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,17 +54,67 @@
     </script>
 </head>
 <body>
-<noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript!  Websocket relies on Javascript being enabled.  Please enable Javascript and reload this page!</h2></noscript>
-<p th:text="'Dashboard'" />
-<div>
-    <div>
-        <button class="btn" id="connect" onclick="connect();">Connect</button>
-        <button class="btn" id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Dashboard</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="main-nav">
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboard 1<span class="sr-only">(current)</span><span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Dashboard 2</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#"><i class="fa fa-plus"></i> New Dashboard</a></li>
+                        <li><a href="#"><i class="fa fa-clone"></i> Copy Dashboard</a></li>
+                        <li><a href="#"><i class="fa fa-edit"></i> Edit Dashboard</a></li>
+                        <li><a href="#"><i class="fa fa-minus"></i> Delete Dashboard</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
+                    <div class="dropdown-menu">
+                        <form class="navbar-form navbar-left">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Username" />
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" placeholder="Password" />
+                            </div>
+                            <button type="submit" class="btn btn-default navbar-btn">Login</button>
+                            <button type="submit" class="btn btn-default navbar-btn">Register</button>
+                        </form>
+                    </div>
+                </li>
+                <li><a href="#"><i class="fa fa-cog" aria-hidden="true" title="Settings"></i></a></li>
+            </ul>
+        </div>
     </div>
-    <div id="conversationDiv">
-        <label>What is your name?</label><input type="text" id="name" />
-        <button class="btn" id="sendName" onclick="sendName();">Send</button>
-        <p id="response"></p>
+</nav>
+
+<div class="container-fluid">
+    <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript!  Websocket relies on Javascript being enabled.  Please enable Javascript and reload this page!</h2></noscript>
+    <p th:text="'Dashboard'" />
+    <div>
+        <div>
+            <button class="btn" id="connect" onclick="connect();">Connect</button>
+            <button class="btn" id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
+        </div>
+        <div id="conversationDiv">
+            <label>What is your name?</label><input type="text" id="name" />
+            <button class="btn" id="sendName" onclick="sendName();">Send</button>
+            <p id="response"></p>
+        </div>
     </div>
 </div>
 </body>
