--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,8 +13,12 @@
     <script src="/js/angular.js"></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/d3.js"></script>
+    <script type="text/javascript">
+        app = angular.module('dashboardApp', []);
+    </script>
     <script src="/js/application.js"></script>
     <script src="/js/dashboardController.js"></script>
+    <script src="/js/userController.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -29,8 +33,8 @@
             <a class="navbar-brand" href="#">Dashboard</a>
         </div>
 
-        <div class="collapse navbar-collapse" id="main-nav" ng-controller="DashboardController as dashboard">
-            <ul class="nav navbar-nav">
+        <div class="collapse navbar-collapse" id="main-nav">
+            <ul class="nav navbar-nav" ng-controller="DashboardController as dashboard">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{dashboard.selected.name}}<span class="sr-only">(current)</span><span class="caret"></span></a>
                     <ul class="dropdown-menu" >
@@ -43,17 +47,17 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" ng-controller="UserController as user">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li class="container-fluid">
                             <form>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Username" />
+                                    <input type="text" ng-model="user.user.username" class="form-control" placeholder="Username" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" placeholder="Password" />
+                                    <input type="password" ng-model="user.user.password" class="form-control" placeholder="Password" />
                                 </div>
                                 <div class="form-group checkbox pull-right">
                                     <label>
@@ -61,8 +65,8 @@
                                     </label>
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-primary navbar-btn">Login</button>
-                                    <button type="submit" class="btn btn-default navbar-btn">Register</button>
+                                    <button type="submit" ng-click="user.login()" class="btn btn-primary navbar-btn">Login</button>
+                                    <button type="submit" ng-click="user.create()" class="btn btn-default navbar-btn">Register</button>
                                 </div>
                             </form>
                         </li>
