--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,8 @@
             </ul>
             <ul class="nav navbar-nav navbar-right" ng-controller="UserController as user">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" ng-show="user.logged_in" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.user.username}} <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" ng-hide="user.logged_in" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log in <span class="caret"></span></a>
                     <ul class="dropdown-menu" style="min-width:200px;">
                         <li class="container-fluid">
                             <div class="alert alert-danger" ng-show="user.error" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Error:</span>{{user.error_message}}</div>
