abstracted out angular users service layer out of the controller

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
         app = angular.module('dashboardApp', []);
     </script>
     <script src="/js/application.js"></script>
+    <script src="/js/userService.js"></script>
     <script src="/js/dashboardController.js"></script>
     <script src="/js/userController.js"></script>
 </head>
