--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,8 +20,9 @@
     </script>
     <script src="/js/application.js"></script>
     <script src="/js/userService.js"></script>
-    <script src="/js/dashboardController.js"></script>
+    <script src="/js/dashboardService.js"></script>
     <script src="/js/userController.js"></script>
+    <script src="/js/dashboardController.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -39,9 +40,9 @@
         <div class="collapse navbar-collapse" id="main-nav">
             <ul class="nav navbar-nav" ng-controller="DashboardController as dashboard">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{dashboard.selected.name}}<span class="sr-only">(current)</span><span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{dashboard.dashboards[current].name}}<span class="sr-only">(current)</span><span class="caret"></span></a>
                     <ul class="dropdown-menu" >
-                        <li ng-repeat="board in dashboard.unselected"><a href="" ng-click="dashboard.select(board.id)">{{board.name}}</a></li>
+                        <li ng-repeat="board in dashboard.unselected()"><a href="" ng-click="dashboard.select(board)">{{dashboard.dashboards[board].name}}</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="" ng-click="dashboard.open_new_popup()"><i class="fa fa-plus"></i> New Dashboard</a></li>
                         <li><a href="" ng-click="dashboard.copy()"><i class="fa fa-clone"></i> Copy Dashboard</a></li>
