--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,8 +19,7 @@
         app = angular.module('dashboardApp', []);
     </script>
     <script src="/js/application.js"></script>
-    <script src="/js/userService.js"></script>
-    <script src="/js/dashboardService.js"></script>
+    <script src="/js/angularService.js"></script>
     <script src="/js/userController.js"></script>
     <script src="/js/dashboardController.js"></script>
 </head>
@@ -40,7 +39,7 @@
         <div class="collapse navbar-collapse" id="main-nav">
             <ul class="nav navbar-nav" ng-controller="DashboardController as dashboard">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{dashboard.dashboards[current].name}}<span class="sr-only">(current)</span><span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{dashboard.dashboards[dashboard.current].name || "None"}}<span class="sr-only">(current)</span><span class="caret"></span></a>
                     <ul class="dropdown-menu" >
                         <li ng-repeat="board in dashboard.unselected()"><a href="" ng-click="dashboard.select(board)">{{dashboard.dashboards[board].name}}</a></li>
                         <li role="separator" class="divider"></li>
