--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -118,80 +118,83 @@
     </div>
 </div>
 
-<div id="new_dashboard_modal" class="modal fade" tabindex="-1" role="dialog" ng-controller="DashboardController as dashboard">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Create a New Dashboard</h4>
+<div id="dashboard_modals_container" ng-controller="DashboardController as dashboard">
+    <div id="new_dashboard_modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Create a New Dashboard</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-danger" ng-show="dashboard.new_dashboard.error" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Error:</span>{{dashboard.new_dashboard.error_message}}</div>
+                    <div class="alert alert-success" ng-show="dashboard.new_dashboard.success" role="alert">{{dashboard.new_dashboard.success_message}}</div>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" ng-model="dashboard.new_dashboard.name" class="form-control" placeholder="Name" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="dashboard.cancel_new_dashboard_modal()">Cancel</button>
+                    <button type="submit" class="btn btn-primary" ng-click="dashboard.create_new_dashboard()">Create</button>
+                </div>
             </div>
-            <div class="modal-body">
-                <div class="alert alert-danger" ng-show="dashboard.new_dashboard.error" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Error:</span>{{dashboard.new_dashboard.error_message}}</div>
-                <div class="alert alert-success" ng-show="dashboard.new_dashboard.success" role="alert">{{dashboard.new_dashboard.success_message}}</div>
-                <form>
-                    <div class="form-group">
-                        <input type="text" ng-model="dashboard.new_dashboard.name" class="form-control" placeholder="Name" />
-                    </div>
-                </form>
+        </div>
+    </div>
+    <div id="edit_dashboard_modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Edit Dashboard</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-danger" ng-show="dashboard.edit_dashboard.error" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Error:</span>{{dashboard.edit_dashboard.error_message}}</div>
+                    <div class="alert alert-success" ng-show="dashboard.edit_dashboard.success" role="alert">{{dashboard.edit_dashboard.success_message}}</div>
+                    <form>
+                        <div class="form-group">
+                            <input type="hidden" id="edit_dashboard_id" ng-model="dashboard.current" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="edit_dashboard_name" ng-model="dashboard.dashboards[dashboard.current].name" class="form-control" placeholder="Name" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="dashboard.cancel_edit_dashboard_modal()">Cancel</button>
+                    <button type="submit" class="btn btn-primary" ng-click="dashboard.update()">Edit</button>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="dashboard.cancel_new_dashboard_modal()">Cancel</button>
-                <button type="submit" class="btn btn-primary" ng-click="dashboard.create_new_dashboard()">Create</button>
+        </div>
+    </div>
+    <div id="delete_dashboard_modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Delete Dashboard</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-danger" ng-show="dashboard.delete_dashboard.error" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Error:</span>{{dashboard.delete_dashboard.error_message}}</div>
+                    <div class="alert alert-success" ng-show="dashboard.delete_dashboard.success" role="alert">{{dashboard.delete_dashboard.success_message}}</div>
+                    <form>
+                        <div class="form-group">
+                            <input type="hidden" id="delete_dashboard_id" ng-model="dashboard.current" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <h4>Delete <span id="delete_dashboard_name">{{dashboard.dashboards[dashboard.current].name}}</span>?</h4>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="dashboard.cancel_delete_dashboard_modal()">Cancel</button>
+                    <button type="submit" class="btn btn-danger" ng-click="dashboard.delete()">Delete</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div id="edit_dashboard_modal" class="modal fade" tabindex="-1" role="dialog" ng-controller="DashboardController as dashboard">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Edit Dashboard</h4>
-            </div>
-            <div class="modal-body">
-                <div class="alert alert-danger" ng-show="dashboard.edit_dashboard.error" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Error:</span>{{dashboard.edit_dashboard.error_message}}</div>
-                <div class="alert alert-success" ng-show="dashboard.edit_dashboard.success" role="alert">{{dashboard.edit_dashboard.success_message}}</div>
-                <form>
-                    <div class="form-group">
-                        <input type="hidden" id="edit_dashboard_id" ng-model="dashboard.edit_dashboard.id" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <input type="text" id="edit_dashboard_name" ng-model="dashboard.edit_dashboard.name" class="form-control" placeholder="Name" />
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="dashboard.cancel_edit_dashboard_modal()">Cancel</button>
-                <button type="submit" class="btn btn-primary" ng-click="dashboard.update()">Edit</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="delete_dashboard_modal" class="modal fade" tabindex="-1" role="dialog" ng-controller="DashboardController as dashboard">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Delete Dashboard</h4>
-            </div>
-            <div class="modal-body">
-                <div class="alert alert-danger" ng-show="dashboard.delete_dashboard.error" role="alert"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Error:</span>{{dashboard.delete_dashboard.error_message}}</div>
-                <div class="alert alert-success" ng-show="dashboard.delete_dashboard.success" role="alert">{{dashboard.delete_dashboard.success_message}}</div>
-                <form>
-                    <div class="form-group">
-                        <input type="hidden" id="delete_dashboard_id" ng-model="dashboard.delete_dashboard.id" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <h4>Delete <span id="delete_dashboard_name"></span>?</h4>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="dashboard.cancel_delete_dashboard_modal()">Cancel</button>
-                <button type="submit" class="btn btn-danger" ng-click="dashboard.delete()">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
+
 </body>
 </html>
