--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/css/application.css" />
     <script src="/js/jquery-1.12.4.js"></script>
     <script src="/js/jquery.cookie.js"></script>
     <script src="/js/sockjs-1.1.1.js"></script>
@@ -22,6 +23,7 @@
     <script src="/js/angularService.js"></script>
     <script src="/js/userController.js"></script>
     <script src="/js/dashboardController.js"></script>
+    <script src="/js/monitorController.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -102,18 +104,32 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="MonitorController as monitor">
     <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript!  Websocket relies on Javascript being enabled.  Please enable Javascript and reload this page!</h2></noscript>
-    <p th:text="'Dashboard'" />
-    <div>
-        <div>
-            <button class="btn" id="connect" onclick="connect();">Connect</button>
-            <button class="btn" id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2 monitor panel panel-default" ng-repeat="mon in monitor.monitors" id="{{mon.id}}">
+        <div class="panel-heading">
+            {{mon.name}}
         </div>
-        <div id="conversationDiv">
-            <label>What is your name?</label><input type="text" id="name" />
-            <button class="btn" id="sendName" onclick="sendName();">Send</button>
-            <p id="response"></p>
+        <div class="panel-body">
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2 monitor button panel panel-default" ng-click="monitor.add_monitor()">
+        <div class="panel-body">
+            <i class="fa fa-plus-circle"></i><b>Add Monitor</b>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <p th:text="'Dashboard'" />
+        <div>
+            <div>
+                <button class="btn" id="connect" onclick="connect();">Connect</button>
+                <button class="btn" id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
+            </div>
+            <div id="conversationDiv">
+                <label>What is your name?</label><input type="text" id="name" />
+                <button class="btn" id="sendName" onclick="sendName();">Send</button>
+                <p id="response"></p>
+            </div>
         </div>
     </div>
 </div>
