--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,7 +115,7 @@
                 <div class="flip-container" ng-class="{'settings': monitor.flipped[mon.id]}">
                     <div class="flipper">
                         <div class="col-xs-12 ccl-sm-12 front" ng-click="monitor.flip_monitor(mon.id);">
-                            {{mon.monitor_type}}<br />{{mon.stat}}<br />{{mon.parser}}<br />{{mon.chart}}<br />{{mon.protocol}}<br />{{mon.interval}}
+                            {{mon.url}}<br />{{mon.monitorType}}<br />{{mon.statType}}<br />{{mon.parser}}<br />{{mon.chart}}<br />{{mon.protocol}}<br />{{mon.interval}}
                         </div>
                         <div class="col-xs-12 ccl-sm-12 back">
                             <form>
@@ -123,26 +123,29 @@
                                     <input id="monitor_name_{{mon.id}}" type="text" class="form-control input-sm" placeholder="Monitor Name" title="Monitor Name" ng-model="mon.name" />
                                 </div>
                                 <div class="form-group">
+                                    <input id="monitor_url_{{mon.id}}" type="text" class="form-control input-sm" placeholder="URL" title="URL" ng-model="mon.url" />
+                                </div>
+                                <div class="form-group">
                                     <label for="monitor_type_{{mon.id}}">Monitor Type</label>
-                                    <select id="monitor_type_{{mon.id}}" class="form-control input-sm" title="Monitor Type" ng-model="mon.monitor_type">
+                                    <select id="monitor_type_{{mon.id}}" class="form-control input-sm" title="Monitor Type" ng-model="mon.monitorType">
                                         <option value="system">System</option>
                                         <option value="script">Script</option>
                                     </select>
                                 </div>
-                                <div class="form-group" ng-show="mon.type == 'system'">
+                                <div class="form-group" ng-show="mon.monitorType == 'system'">
                                     <label for="monitor_stat_{{mon.id}}">System Stat</label>
-                                    <select id="monitor_stat_{{mon.id}}" class="form-control input-sm" title="System Stat" ng-model="mon.stat">
+                                    <select id="monitor_stat_{{mon.id}}" class="form-control input-sm" title="System Stat" ng-model="mon.statType">
                                         <option value="cpu">CPU</option>
                                         <option value="ram">Memory</option>
                                         <option value="hdd">Disk Space</option>
                                     </select>
                                 </div>
-                                <div class="form-group" ng-show="mon.type == 'script'">
+                                <div class="form-group" ng-show="mon.monitorType == 'script'">
                                     <label for="monitor_parser_{{mon.id}}">Output Parser</label>
                                     <textarea id="monitor_parser_{{mon.id}}" class="form-control input-sm" title="Output Parser" ng-model="mon.parser">
                                     </textarea>
                                 </div>
-                                <div class="form-group" ng-show="mon.type == 'script'">
+                                <div class="form-group" ng-show="mon.monitorType == 'script'">
                                     <label for="monitor_chart_{{mon.id}}">Chart Type</label>
                                     <select id="monitor_chart_{{mon.id}}" class="form-control input-sm" title="Chart Type" ng-model="mon.chart">
                                         <option value="number">Number</option>
